[tool.poetry]
name = "internetofagents"
version = "0.0.0"
description = "Internet of AI Agents"
authors = ["Div Garg <divyansh199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
multion = "^0.2.23"
prefect = "^2.14.10"
instructor = "^0.4.2"
openai = "^1.3.8"
pydantic = "^2.5.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
